fix balancer logic
more in changelog
